--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Digital press
 description: A clear check on thought process
-baseurl: '' # the subpath of your site, e.g. /blog
+baseurl: '/aquatours.net' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site http://www.example.com
 # google_analytics: 'UA-XXXXXX-X'
 
